fix(style): line height for truncate

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -155,6 +155,7 @@ $sides: (top, right, bottom, left);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  line-height: initial;
 }
 .multi-line-truncation {
   -webkit-box-orient: vertical;
